fix getFirst() usage